<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/drawable_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_complete_menu"
            android:icon="@drawable/drawable_menu_comp_menu"
            android:title="@string/menu_complete_menu" />
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/drawable_menu_faqs"
            android:title="@string/menu_faqs" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/drawable_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/drawable_menu_rate"
            android:title="@string/menu_rate_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/drawable_menu_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>