<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_fragment_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.nagraj.messnitrkl.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_complete_menu"
        android:name="com.nagraj.messnitrkl.ui.completemenu.CompleteMenuFragment"
        android:label="@string/menu_complete_menu"
        tools:layout="@layout/fragment_complete_menu" />

    <fragment
        android:id="@+id/nav_faqs"
        android:name="com.nagraj.messnitrkl.ui.faqs.FaqsFragment"
        android:label="@string/menu_faqs"
        tools:layout="@layout/fragment_faqs" />
</navigation>